edit gitignore again

--- a/.gitignore
+++ b/.gitignore
@@ -164,4 +164,4 @@ buildNumber.properties
 # End of https://www.gitignore.io/api/java,redis,macos,maven,intellij
 
 .idea/
-.acs-exercise.iml
+acs-exercise.iml
