--- a/docker-compose-redis.yaml
+++ b/docker-compose-redis.yaml
@@ -10,5 +10,20 @@ services:
     ports:
       - "8080:8080" # Map native 8080 port to container 8080 port
     restart: always
+    depends_on:
+      - redis # Build first with dependent services
     environment: # Setting environment variables
-      spring.redis.host: 172.31.31.135
+      spring.redis.host: redis
+#    networks: # Network connection and redis
+#      - backend
+  redis:
+    image: redis
+    command: [ "redis-server", "--protected-mode", "no" ]
+    hostname:
+      localhost
+    ports:
+      - "6379:6379"
+#    networks:
+#      - backend
+#networks:
+#  backend:
