--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -7,6 +7,8 @@ services:
     build:
       context: . # Configuration requires the path of the Dockerfile to be built relative to docker-compose.yml
       dockerfile: Dockerfile
+    hostname:
+      localhost
     ports:
       - "8080:8080" # Map native 8080 port to container 8080 port
     restart: always
