--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -14,3 +14,11 @@ services:
     restart: always
     environment: # Setting environment variables
       spring.redis.host: 172.31.31.135
+  nginx:
+    image: nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./tls:/tls
+    ports:
+      - "80:80"
+      - "443:443"
