--- a/docker-compose-redis.yaml
+++ b/docker-compose-redis.yaml
@@ -7,15 +7,19 @@ services:
     build:
       context: . # Configuration requires the path of the Dockerfile to be built relative to docker-compose.yml
       dockerfile: Dockerfile
-    ports:
-      - "8080:8080" # Map native 8080 port to container 8080 port
     restart: always
     depends_on:
       - redis # Build first with dependent services
     environment: # Setting environment variables
       spring.redis.host: redis
-#    networks: # Network connection and redis
-#      - backend
+  nginx:
+    image: nginx
+    volumes:
+      - ./nginx.conf:/etc/nginx/conf.d/default.conf
+      - ./tls:/tls
+    ports:
+      - "80:80"
+      - "443:443"
   redis:
     image: redis
     command: [ "redis-server", "--protected-mode", "no" ]
@@ -23,7 +27,3 @@ services:
       localhost
     ports:
       - "6379:6379"
-#    networks:
-#      - backend
-#networks:
-#  backend:
