--- a/docker-compose-redis.yaml
+++ b/docker-compose-redis.yaml
@@ -7,6 +7,8 @@ services:
     build:
       context: . # Configuration requires the path of the Dockerfile to be built relative to docker-compose.yml
       dockerfile: Dockerfile
+    hostname:
+        localhost
     restart: always
     depends_on:
       - redis # Build first with dependent services
