--- a/docker-compose-redis.yaml
+++ b/docker-compose-redis.yaml
@@ -15,6 +15,8 @@ services:
     environment: # Setting environment variables
       spring.redis.host: redis
   nginx:
+    depends_on:
+      - application
     image: nginx
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
