--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -13,6 +13,8 @@ services:
     environment: # Setting environment variables
       spring.redis.host: 172.31.31.135
   nginx:
+    depends_on:
+      - application
     image: nginx
     volumes:
       - ./nginx.conf:/etc/nginx/conf.d/default.conf
